<resources>
    <string name="app_name">Counter Sense</string>
    <string name="settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_config">Save Config</string>
    <string name="cs_stats_id">CS STATS ID</string>
    <string name="sa_project"> Counter Sense </string>
    <string name="body_weight">Body Weight (KG)</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="location_sensor">Location Sensor</string>
    <string name="configuration_menu">Configuration Menu</string>
    <string name="load_config">Load Config</string>
    <string name="weather" />
    <string name="location">Location</string>
    <string name="temperature" />
    <string name="ground_level" />
    <string name="sea_level" />
    <string name="min_temperature" />
    <string name="max_temperature" />
    <string name="humidity" />
    <string name="pressure" />
    <string name="feelslike" />
    <string name="graphs">Graphs</string>
    <string name="reload_cache">Reload Cache</string>
    <string name="app_logo"> App Logo</string>
    <string name="app_description">Counter Sense is your personal Counter-Strike 2 unofficial performance analyser.</string>
    <string name="user_settings">User Settings</string>
    <string name="current_weather_data">Current Weather Data</string>
    <string name="sensor_data">Sensor Data</string>
    <string name="home">Home</string>
    <string name="uminho">UMinho</string>
    <string name="appContext">This application was built for the practical project of the Sensorization and Environment curricular unit of the Software Engineering Masters Degree at Universidade do Minho.</string>
    <string name="partners">Partners</string>
    <string name="current_data_collected">Current Data Collected</string>
    <string name="performance_data_analysis">Performance Data Analysis</string>
    <string name="performanceImpact">This Graph showcases the impact physical activity provides to your performance, taking your daily activity into account.</string>
    <string name="performanceImpact2">This Graph showcases the impact weather conditions provides to your performance.</string>
    <string name="performanceValues"><![CDATA[This graph can help you understand the frequency of your performance levels. We take all factors of your score into account to create a new metric called AVG Daily Match Performance. It measures performance in seven levels, Terrible (< 1.5), Very Bad (< 2.5), Bad (< 3.5), Medium (< 4.5), Good (< 5.5), Very Good (< 6.5) and Excellent (6.5 or higher).]]></string>
    <string name="performanceSleep">Here you can see how your estimated sleep time (in minutes) affects your performance.</string>
    <string name="SleepDistribution">This is the distribution of your estimated sleep time.</string>
    <string name="OverallGraph">The Overall Graph displays the values of all relevant data used to make the other graphs.</string>
    <string name="distance_run">Distance Run:</string>
    <string name="steps_counter">Steps Counter:</string>
    <string name="start_sleeping">Start Sleeping:</string>
    <string name="end_sleeping">End Sleeping:</string>
    <string name="avg_temperature_c">Avg Temperature (ºC):</string>
    <string name="avg_humidity">Avg Humidity:</string>
    <string name="avg_pressure">Avg Pressure:</string>
    <string name="data_stored">Data Stored:</string>
    <string name="next_insert">Next Insert</string>
</resources>