<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/temperatureTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/location"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/temperatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/temperature"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/feelsLikeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/temperatureTextView"
        android:layout_centerInParent="true"
        android:text="@string/feelslike"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/pressureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/feelsLikeTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/pressure"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/humidityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pressureTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/humidity"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/maxTemperatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/humidityTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/max_temperature"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/minTemperatureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/maxTemperatureTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/min_temperature"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/seaLevelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/minTemperatureTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/sea_level"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/groundLevelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/seaLevelTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/ground_level"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible" />

</RelativeLayout>
