<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ConfigFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/csStatsIdTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cs_stats_id"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/csstatsid"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginEnd="8dp"/>

                <EditText
                    android:id="@+id/csstatsid"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/csStatsIdTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="8dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/bodyWeightTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/body_weight"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/bodyWeight"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginEnd="8dp"/>

                <EditText
                    android:id="@+id/bodyWeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/bodyWeightTextView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="8dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/localitonSensorTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/location_sensor"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/switchLocaltionSensor"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginEnd="8dp"/>

               <com.google.android.material.switchmaterial.SwitchMaterial
                   android:id="@+id/switchLocaltionSensor"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   app:layout_constraintStart_toEndOf="@id/localitonSensorTextView"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintBottom_toBottomOf="parent"
                   android:gravity="center"
                   android:layout_marginStart="8dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
        
        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_config"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/baseline_add_24"
            style="@style/custom_button"
            android:text="@string/save_config"
            android:textColor="@color/white"
            android:textAllCaps="false"/>
    </LinearLayout>


</FrameLayout>